--- a/Bitunion/Bitunion.csproj
+++ b/Bitunion/Bitunion.csproj
@@ -114,6 +114,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\ForumPageViewModel.cs" />
     <Compile Include="ViewModels\ThreadViewModel.cs" />
     <Compile Include="ViewModels\ForumViewModel.cs" />
     <Compile Include="ViewModels\ItemViewModel.cs" />
