--- a/Bitunion/Bitunion.csproj
+++ b/Bitunion/Bitunion.csproj
@@ -100,6 +100,7 @@
     <Compile Include="BuThreadPage.xaml.cs">
       <DependentUpon>BuThreadPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SuperTextBlock.cs" />
     <Compile Include="Converter.cs" />
     <Compile Include="HttpLibrary.cs" />
     <Compile Include="LocalizedStrings.cs" />
@@ -180,6 +181,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\loginpage.png" />
+    <Content Include="XMLFile1.xml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
