--- a/Bitunion/Bitunion.csproj
+++ b/Bitunion/Bitunion.csproj
@@ -188,28 +188,12 @@
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Assets\Tiles\123.jpg" />
-    <Content Include="Assets\Tiles\321.png" />
-    <Content Include="Assets\Tiles\FlipCycleTileLarge.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\Tiles\FlipCycleTileMedium.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\Tiles\FlipCycleTileSmall.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\Tiles\IconicTileMediumLarge.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\Tiles\IconicTileSmall.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\123.jpg" />
+    <Content Include="Assets\Tiles\metro173.png" />
+    <Content Include="Assets\Tiles\metro63.png" />
+    <Content Include="Assets\Tiles\metro99.png" />
     <Content Include="Images\cancel.png" />
     <Content Include="Images\loginpage.png" />
     <Content Include="Images\logout.png" />
-    <Content Include="Images\metro.png" />
     <Content Include="Images\next.png" />
     <Content Include="Images\ok.png" />
     <Content Include="Images\post.ico" />
